--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,30 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "SaaS Boilerplate: tRPC + Fastify + Prisma + PostgreSQL server",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "db:push": "prisma db push",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio"
   },
-  "keywords": [],
+  "keywords": [
+    "trpc",
+    "fastify",
+    "prisma",
+    "postgresql",
+    "boilerplate"
+  ],
   "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
+  "license": "MIT",
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@prisma/client": "6.19.0",
     "@trpc/server": "^11.7.1",
+    "dotenv": "^16.6.1",
     "fastify": "^5.6.1",
     "zod": "^4.1.12"
   },
@@ -24,5 +33,6 @@
     "prisma": "^6.19.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
-  }
+  },
+  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
