Add auth functionality with  signup and login forms; integrate session management

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,8 @@
 DATABASE_URL="postgresql://username:password@your-neon-db.neon.tech/dbname?sslmode=require"
 PORT=3000
-# CORS (Client URL)
 CLIENT_URL="http://localhost:5173"
+NODE_ENV=development
+BETTER_AUTH_SECRET="sample-secret"
+BETTER_AUTH_URL="http://localhost:3000"
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
