--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.90.7",
     "@trpc/client": "^11.7.1",
     "@trpc/react-query": "^11.7.1",
+    "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
