--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
     "version": "1.0.0",
     "description": "Full-stack boilerplate with React, tRPC, Fastify, Prisma, and PostgreSQL",
     "scripts": {
-      "install:all": "cd server && npm install && cd ../client && npm install",
-      "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
-      "build": "cd server && npm run build && cd client && npm run build",
-      "setup": "node setup.js"
+        "install:all": "cd server && npm install && cd ../client && npm install",
+        "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
+        "build": "cd server && npm run build && cd client && npm run build",
+        "setup": "node setup.js"
     },
     "keywords": [
-      "react",
-      "trpc",
-      "fastify",
-      "prisma",
-      "postgresql",
-      "typescript",
-      "boilerplate",
-      "full-stack"
+        "react",
+        "trpc",
+        "fastify",
+        "prisma",
+        "postgresql",
+        "typescript",
+        "boilerplate",
+        "full-stack"
     ],
     "author": "nuhman",
     "license": "MIT",
     "devDependencies": {
-      "concurrently": "^8.2.2"
-    }
+        "concurrently": "^8.2.2"
+    },
+    "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
