--- a/server/package.json
+++ b/server/package.json
@@ -24,11 +24,13 @@
     "@fastify/cors": "^11.1.0",
     "@prisma/client": "6.19.0",
     "@trpc/server": "^11.7.1",
+    "better-auth": "^1.3.34",
     "dotenv": "^16.6.1",
     "fastify": "^5.6.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@better-auth/cli": "^1.3.34",
     "@types/node": "^24.10.0",
     "prisma": "^6.19.0",
     "tsx": "^4.20.6",
